# electrical-panel-rpi

./: .gitignore  LICENSE  README.md  pyproject.toml  run
docker/: Dockerfile
scripts/: mqtt.py
src/: config.py  core.py  lights.py  main.py  managers.py
src/in_out/: core.py  i2c.py  inputs.py  relay.py  utils.py
src/tests/: conftest.py  test_config.py  test_lights.py
