[tool.poetry]
name = "electrical-panel-rpi"
version = "0.1.0"
description = ""
authors = ["candale <candale.andrei@gmail.com>"]
readme = "README.md"
packages = [{include = "electrical_panel_rpi"}]

[tool.poetry.dependencies]
python = "^3.10"
paho-mqtt = "^1.6.1"
pyyaml = "^6.0"
smbus2 = "^0.4.2"
loguru = "^0.7.0"
sm16inpind = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pudb = "^2022.1.3"
pytest = "^7.2.2"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
